--- a/package.json
+++ b/package.json
@@ -2,25 +2,26 @@
   "name": "thaliak-xltn",
   "version": "1.0.0",
   "private": true,
+  "homepage": "http://ceg9498.github.io/thaliak-xltn",
   "dependencies": {
     "@types/jest": "24.0.13",
     "@types/node": "12.0.5",
     "@types/react": "16.8.19",
     "@types/react-dom": "16.8.4",
+    "gh-pages": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "serve": "^11.0.1",
     "typescript": "3.5.1",
     "xivapi-js": "^0.2.4"
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "yarn build"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -b gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
